baml_language/crates/baml_tests/snapshots/compiles/lambda_basic/baml_tests__compiles__lambda_basic__04_tir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== TIR2 ===
function user.test_annotated() -> int throws never {
  { : int
    let double = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x * 2
        }
    double(21) : int
  }
}
lambda user.test_annotated {
}
function user.test_inferred_return() -> int throws never {
  { : int
    let double = : (x: int) -> int throws never
      (x: int) -> { ... } : (x: int) -> int throws never
        {
          x * 2
        }
    double(21) : int
  }
}
lambda user.test_inferred_return {
}
function user.test_zero_param() -> int throws never {
  { : int
    let constant = : () -> int throws never
      () -> int { ... } : () -> int throws never
        {
          42
        }
    constant() : int
  }
}
lambda user.test_zero_param {
}
function user.test_map_inferred() -> int[] throws never {
  { : int[]
    let items = [1, 2, 3] : int[]
    items.map<U, E>((x) -> { ... }) : int[]
      (x) -> { ... } : (x: int) -> int throws E
        {
          x * 2
        }
  }
}
lambda user.test_map_inferred {
}
function user.test_throws() -> int throws never {
  { : int
    let risky = : (x: int) -> int throws string
      (x: int) -> int throws string { ... } : (x: int) -> int throws string
        {
          if (x < 0)
            {
              throw "negative"
            }
          x
        }
    risky(42) : int
  }
}
lambda user.test_throws {
}
function user.test_capture() -> int throws never {
  { : int
    let offset = 10 : 10 -> int
    let add_offset = : (x: int) -> int throws never
      (x: int) -> int { ... } : (x: int) -> int throws never
        {
          x + offset
        }
    add_offset(32) : int
  }
}
lambda user.test_capture {
}
function user.test_nested() -> int throws never {
  { : int
    let outer = : (x: int) -> int throws never
      (x: int) -> { ... } : (x: int) -> int throws never
        {
          let inner = ...
            (y: int) -> int { ... }
              {
                x + y
              }
          inner(1)
        }
    outer(41) : int
  }
}
lambda user.test_nested {
}
lambda user.test_nested {
}
function user.test_generic_lambda() -> int throws never {
  { : int | 42
    let identity = : (x: T) -> T throws never
      <T>(x: T) -> T { ... } : (x: T) -> T throws never
        {
          x
        }
    identity<T>(42) : int | 42
  }
}
lambda user.test_generic_lambda {
}
function user.test_multi_param() -> int throws never {
  { : int
    let add = : (a: int, b: int) -> int throws never
      (a: int, b: int) -> int { ... } : (a: int, b: int) -> int throws never
        {
          a + b
        }
    add(20, 22) : int
  }
}
lambda user.test_multi_param {
}
