baml_language/crates/baml_tests/snapshots/compiles/lambda_basic/baml_tests__compiles__lambda_basic__05_diagnostics.snap
---
source: crates/baml_tests/src/generated_tests.rs
assertion_line: 9707
---
=== COMPILER2 DIAGNOSTICS ===
No errors found.
